# app-menu

./: Cargo.toml  build.rs
src/: app_data.rs  desktop_entry.rs  icon.rs  main.rs  reader.rs
src/app_object/: imp.rs  mod.rs
src/app_row/: imp.rs  mod.rs
src/reader/: mod.rs  reader_error.rs
src/resources/: app_row.ui  resources.gresource.xml  window.ui
src/util/: icon.rs
src/window/: imp.rs  mod.rs
