[package]
name = "app-menu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
dirs = "5.0.0"
gtk = { version = "0.6.4", package = "gtk4", features = ["v4_8"] }
freedesktop-desktop-entry = "0.5.0"
once_cell = "1.17.1"
log = "0.4"
env_logger = "0.10"

[build-dependencies]
glib-build-tools = "0.17.0"
